--- a/.github/workflows/dockerizeApp.yaml
+++ b/.github/workflows/dockerizeApp.yaml
@@ -13,6 +13,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Building interview app docker image
-        run: docker build . --file Dockerfile --tag interview-app:$(date +%s)
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Login to JFrog
+        uses: docker/login-action@v1
+        with:
+          registry: delizardo.jfrog.io
+          username: ${{ secrets.LENDBUZZ_USER }}
+          password: ${{ secrets.LENDBUZZ }}
+      - name: Build and push
+        id: docker_interview_app_image
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: delizardo.jfrog.io/interview-app:latest
