oops; bad annotation

--- a/.github/workflows/dockerizeApp.yaml
+++ b/.github/workflows/dockerizeApp.yaml
@@ -10,7 +10,7 @@ on:
       - "main"
       - "master"
 jobs:
-  build and push:
+  buildNpush:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
