--- a/.github/workflows/dockerizeApp.yaml
+++ b/.github/workflows/dockerizeApp.yaml
@@ -10,7 +10,7 @@ on:
       - "main"
       - "master"
 jobs:
-  buildNpush:
+  buildpush:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -21,6 +21,7 @@ jobs:
           username: ${{ secrets.LENDBUZZ_USER }}
           password: ${{ secrets.LENDBUZZ_PASS }}
       - name: Build and publish to registry
-        run: docker build . --file Dockerfile --tag interview-app:$(date +%s)
-        run: docker run interview-app:$(date +%s)
-        run: docker push interview-app:$(date +%s)
+        run: |
+          docker build . --file Dockerfile --tag interview-app:$(date +%s)
+          docker run interview-app:$(date +%s)
+          docker push interview-app:$(date +%s)
