--- a/.github/workflows/dockerizeApp.yaml
+++ b/.github/workflows/dockerizeApp.yaml
@@ -23,5 +23,4 @@ jobs:
       - name: Build and publish to registry
         run: |
           docker build . --file Dockerfile --tag interview-app:$(date +%s)
-          docker run interview-app:$(date +%s)
-          docker push interview-app:$(date +%s)
+          docker push delizardo.jfrog.io/interview-app-local/interview-app:$(date +%s)
