reference format error in last push

--- a/.github/workflows/dockerizeApp.yaml
+++ b/.github/workflows/dockerizeApp.yaml
@@ -22,5 +22,5 @@ jobs:
           password: ${{ secrets.LENDBUZZ_PASS }}
       - name: Build and publish to registry
         run: |
-          docker build . --file Dockerfile --tag interview-app:$(date +%s)
-          docker push delizardo.jfrog.io:interview-app-local/interview-app:$(date +%s)
+          docker build . --file Dockerfile --tag interview-app-local/interview-app:$(date +%s)
+          docker push delizardo.jfrog.io/interview-app-local/interview-app:$(date +%s)
