prettier tags for images

--- a/.github/workflows/dockerizeApp.yaml
+++ b/.github/workflows/dockerizeApp.yaml
@@ -22,5 +22,8 @@ jobs:
           password: ${{ secrets.LENDBUZZ_PASS }}
       - name: Build and publish to registry
         run: |
-          docker build . --file Dockerfile --tag delizardo.jfrog.io/interview-app-local/interview-app:$(git rev-parse --short HEAD)
-          docker push delizardo.jfrog.io/interview-app-local/interview-app:$(git rev-parse --short HEAD)
+          export DATESTAMP=$(date +%Y%m%d)
+          export HASH=$(git rev-parse --short HEAD)
+          export TAG="$DATESTAMP-$HASH"
+          docker build . --file Dockerfile --tag delizardo.jfrog.io/interview-app-local/interview-app:$TAG
+          docker push delizardo.jfrog.io/interview-app-local/interview-app:$TAG
