smoothing out versioning for deployment pipeline later

--- a/.github/workflows/dockerizeApp.yaml
+++ b/.github/workflows/dockerizeApp.yaml
@@ -20,10 +20,16 @@ jobs:
           registry: delizardo.jfrog.io
           username: ${{ secrets.LENDBUZZ_USER }}
           password: ${{ secrets.LENDBUZZ_PASS }}
-      - name: Build and publish to registry
+      - name: create unique tag
         run: |
           export DATESTAMP=$(date +%Y%m%d)
           export HASH=$(git rev-parse --short HEAD)
           export TAG="$DATESTAMP-$HASH"
+      - name: build and push archive copy of image
+        run: |
           docker build . --file Dockerfile --tag delizardo.jfrog.io/interview-app-local/interview-app:$TAG
           docker push delizardo.jfrog.io/interview-app-local/interview-app:$TAG
+      - name: tag new build as latest and push
+        run: |
+          docker tag delizardo.jfrog.io/interview-app-local/interview-app:$TAG delizardo.jfrog.io/interview-app-local/interview-app:latest
+          docker push delizardo.jfrog.io/interview-app-local/interview-app:latest
