actions dropping datestamp tag for some reason

--- a/.github/workflows/dockerizeApp.yaml
+++ b/.github/workflows/dockerizeApp.yaml
@@ -20,17 +20,21 @@ jobs:
           registry: delizardo.jfrog.io
           username: ${{ secrets.LENDBUZZ_USER }}
           password: ${{ secrets.LENDBUZZ_PASS }}
-      - name: create unique tag
+      - name: build and push archive copy of image
         run: |
           export DATESTAMP=$(date +%Y%m%d)
           export HASH=$(git rev-parse --short HEAD)
           export TAG="$DATESTAMP-$HASH"
-      - name: build and push archive copy of image
-        run: |
-          docker build . --file Dockerfile --tag interview-app
-          docker tag interview-app delizardo.jfrog.io/interview-app-local/interview-app:$TAG
+          docker build . --file Dockerfile --tag delizardo.jfrog.io/interview-app-local/interview-app:$TAG
           docker push delizardo.jfrog.io/interview-app-local/interview-app:$TAG
-      - name: tag new build as latest and push
-        run: |
-          docker tag delizardo.jfrog.io/interview-app-local/interview-app:$TAG delizardo.jfrog.io/interview-app-local/interview-app:latest
-          docker push delizardo.jfrog.io/interview-app-local/interview-app:latest
+      #   run: |
+      #     export DATESTAMP=$(date +%Y%m%d)
+      #     export HASH=$(git rev-parse --short HEAD)
+      #     export TAG="$DATESTAMP-$HASH"
+      #     docker build . --file Dockerfile -t interview-app interview-app delizardo.jfrog.io/interview-app-local/interview-app:latest -t
+      #     docker tag interview-app delizardo.jfrog.io/interview-app-local/interview-app:$TAG
+      #     docker push delizardo.jfrog.io/interview-app-local/interview-app:$TAG
+      # - name: tag new build as latest and push
+      #   run: |
+      #     docker tag interview-app delizardo.jfrog.io/interview-app-local/interview-app:latest
+      #     docker push delizardo.jfrog.io/interview-app-local/interview-app:latest
